package se.dandel.gameon.domain.model;

public enum TournamentType {
    CUP, LEAGUE;
}
